# bevy_gamejam_6

./: .gitignore  Cargo.toml
.github/workflows/: ci.yaml  release.yaml
assets/fonts/: license
assets/scenes/: Cube.glb  RoomWalls.glb  block_tube.glb  jam6scene1.glb  weighted_cube_cyan.glb
assets/shaders/: custom_phase.wgsl  post_processing.wgsl  test_material.wgsl  unlit.wgsl
assets/sounds/: door_open_license
src/: main.rs
src/asset_management/: asset_loading.rs  asset_tag_components.rs  mod.rs  unity.rs
src/game/: audio.rs  button.rs  cube_spitter.rs  discharge_gate.rs  dissolve_gate.rs  door.rs  inert.rs  input.rs  interaction.rs  mod.rs  player.rs  pressure_plate.rs  signal_preview.rs  signal_spitter.rs  signals.rs  standing_cube_spitter.rs  weighted_cube.rs
src/rendering/: mod.rs  section_color_postprocess.rs  section_color_prepass.rs  test_material.rs  unlit_material.rs
src/ui/: crosshair.rs  loading_screen.rs  main_menu.rs  mod.rs  system_menu.rs  you_win.rs
web/: index.html
